--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
         <script type="text/javascript" src="js/entities/entities.js"></script>
         <script type="text/javascript" src="js/entities/HUD.js"></script>
+        <script type="text/javascript" src="js/entities/projectiles.js"></script>
 
         <script type="text/javascript" src="js/screens/title.js"></script>
         <script type="text/javascript" src="js/screens/play.js"></script>
@@ -61,7 +62,7 @@
                 console.log('move', event)
                 // me.input.triggerKeyEvent(me.input.KEY.LEFT, true);
             })
-            var rightJoystick	= new VirtualJoystick({
+            var fireJoystick	= new VirtualJoystick({
                 container	: document.body,
                 strokeStyle	: 'red',
                 limitStickTravel: true,
@@ -70,19 +71,19 @@
                 // baseX: 256,
                 // baseY: 256
             });
-            rightJoystick.addEventListener('touchStartValidation', function(event){
+            fireJoystick.addEventListener('touchStartValidation', function(event){
                 var touch	= event.changedTouches[0];
                 if( touch.pageX < window.innerWidth/2 )	return false;
                 return true
             });
-            rightJoystick.addEventListener('touchStart', function(){
+            fireJoystick.addEventListener('touchStart', function(){
                 console.log('fire')
                 me.input.triggerKeyEvent(me.input.KEY.SPACE, true);
-            })
-            rightJoystick.addEventListener('touchEnd', function(){
+            });
+            fireJoystick.addEventListener('touchEnd', function(){
                 console.log('end fire')
                 me.input.triggerKeyEvent(me.input.KEY.SPACE, false);
-            })
+            });
             me.device.onReady(function onReady() {
                 game.onload();
             });
@@ -91,7 +92,7 @@
         <script>
             var userName = 'user' + Math.floor((Math.random()*1000)+1);
             var playersList = [];
-            var socket =  io.connect('http://ns357120.ip-91-121-145.eu:9092');
+            var socket = io.connect('http://ns3053402.ip-91-121-108.eu:9092');
 
             socket.on('connect', function() {
                 console.log('connected')
@@ -106,7 +107,6 @@
                 if (data.player.name !== userName) {
                     const playerFound = playersList.find(player => player.player.name === data.player.name);
                     if (playerFound) {
-                        
                         // update player
                         playerFound.x = data.x;
                         playerFound.y = data.y;
@@ -118,13 +118,24 @@
                     } else {
                         console.log("add player", data) 
                         // create new player
-                        const newAlly = me.pool.pull("ally", data.x, data.y, {
-                            id: data.player.name
-                        })
-                        me.game.world.addChild(newAlly);
-                        data.GUID = newAlly.GUID;
+                        const newPlayer = me.pool.pull("player", data.x, data.y)
+                        me.game.world.addChild(newPlayer);
+                        data.GUID = newPlayer.GUID;
                         console.log(data);
                         playersList.push(data);
+                    }
+                    me.game.world.updateChildBounds();
+                }
+            });
+
+            socket.on('attackEvent', function(data) {
+                console.log("received attack", data)
+                if (data.player.name !== userName) {
+                    const playerFound = playersList.find(player => player.player.name === data.player.name);
+                    if (playerFound) {
+                        // update player
+                        const playerElement = me.game.world.getChildByGUID(playerFound.GUID);
+                        playerElement.attack();
                     }
                     me.game.world.updateChildBounds();
                 }
