--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <link rel="apple-touch-icon" href="icons/touch-icon-iphone-60x60.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="icons/touch-icon-ipad-76x76.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="icons/touch-icon-iphone-retina-120x120.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="icons/touch-icon-ipad-retina-152x152.png">
         <link rel="manifest" href="manifest.json">
     </head>
     <body>
         <!-- Canvas placeholder -->
-        <div id="screen"></div>
+        <div id="screen">
+            <label class="ws-status"></label>
+        </div>
 
         <!-- es5/es6 shim for legacy browsers" -->
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.11/es5-shim.min.js"></script>
@@ -42,8 +40,7 @@
         <script type="text/javascript" src="js/screens/play.js"></script>
         <script type="text/javascript" src="js/virtualjoystick.js"></script>
         <script type="text/javascript" src="js/socket.io/socket.io.js"></script>
-        <!-- /build -->
-
+        
         <!-- Bootstrap -->
         <script type="text/javascript">
             console.log("touchscreen is", VirtualJoystick.touchScreenAvailable() ? "available" : "not available");
@@ -67,14 +64,17 @@
                 strokeStyle	: 'red',
                 limitStickTravel: true,
                 stickRadius	: 0,
-                // stationaryBase: true,
-                // baseX: 256,
-                // baseY: 256
+            });
+            var jumpJoystick	= new VirtualJoystick({
+                container	: document.body,
+                strokeStyle	: 'green',
+                limitStickTravel: true,
+                stickRadius	: 0,
             });
             fireJoystick.addEventListener('touchStartValidation', function(event){
                 var touch	= event.changedTouches[0];
-                if( touch.pageX < window.innerWidth/2 )	return false;
-                return true
+                if( touch.pageX >= window.innerWidth/2 && touch.pageY < window.innerHeight/2 )	return true;
+                return false
             });
             fireJoystick.addEventListener('touchStart', function(){
                 console.log('fire')
@@ -84,6 +84,18 @@
                 console.log('end fire')
                 me.input.triggerKeyEvent(me.input.KEY.SPACE, false);
             });
+
+            jumpJoystick.addEventListener('touchStartValidation', function(event){
+                var touch	= event.changedTouches[0];
+                if( touch.pageX >= window.innerWidth/2 && touch.pageY >= window.innerHeight/2 )	return true;
+                return false
+            });
+            jumpJoystick.addEventListener('touchStart', function(){
+                me.input.triggerKeyEvent(me.input.KEY.UP, true);
+            });
+            jumpJoystick.addEventListener('touchEnd', function(){
+                me.input.triggerKeyEvent(me.input.KEY.UP, false);
+            });
             me.device.onReady(function onReady() {
                 game.onload();
             });
@@ -92,14 +104,18 @@
         <script>
             var userName = 'user' + Math.floor((Math.random()*1000)+1);
             var playersList = [];
-            var socket = io.connect('http://ns3053402.ip-91-121-108.eu:9092');
+            var socket = io.connect('http://ns3053402.ip-91-121-108.eu:9091');
+            const wsStatusElement = document.querySelector('.ws-status');
+            wsStatusElement.textContent = "Disconnected"
 
             socket.on('connect', function() {
                 console.log('connected')
+                wsStatusElement.textContent = "Connected"
             });
 
             socket.on('disconnect', function() {
                 console.log('disconnected')
+                wsStatusElement.textContent = "Disconnected"
             });
 
             socket.on('positionEvent', function(data) {
@@ -110,18 +126,23 @@
                         // update player
                         playerFound.x = data.x;
                         playerFound.y = data.y;
-                        const ally = me.game.world.getChildByGUID(playerFound.GUID);
-                        console.log("update player", ally, data) 
-                        ally.pos.x = data.x;
-                        ally.pos.y = data.y;
-                        ally.update();
+                        const playerToUpdate = me.game.world.getChildByGUID(playerFound.GUID);
+                        console.log("update player", playerToUpdate, data) 
+                        playerToUpdate.pos.x = data.x - 7;
+                        playerToUpdate.pos.y = data.y;
+                        playerToUpdate.renderable.flipX(data.flippedX);
+                        // playerToUpdate.update();
                     } else {
                         console.log("add player", data) 
                         // create new player
-                        const newPlayer = me.pool.pull("player", data.x, data.y)
+                        const newPlayer = me.pool.pull("player", data.x - 7, data.y, {
+                            character: data.player.character,
+                            width: 64,
+                            height: 64,
+                        });
+                        newPlayer.renderable.flipX(data.flippedX);
                         me.game.world.addChild(newPlayer);
                         data.GUID = newPlayer.GUID;
-                        console.log(data);
                         playersList.push(data);
                     }
                     me.game.world.updateChildBounds();
@@ -138,6 +159,19 @@
                         playerElement.attack();
                     }
                     me.game.world.updateChildBounds();
+                }
+            });
+
+            socket.on('deathEvent', function(data) {
+                console.log("received death", data)
+                if (data.player.name !== userName) {
+                    const playerFound = playersList.find(player => player.player.name === data.player.name);
+                    if (playerFound) {
+                        // update player
+                        const playerElement = me.game.world.getChildByGUID(playerFound.GUID);
+                        me.game.world.removeChild(playerElement);
+                        me.game.world.updateChildBounds();
+                    }
                 }
             });
         </script>
