--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- Canvas placeholder -->
         <div id="screen">
             <label class="ws-status"></label>
+            <!-- <div class="waiting">Waiting for players...</label> -->
         </div>
 
         <!-- es5/es6 shim for legacy browsers" -->
@@ -96,83 +97,109 @@
             jumpJoystick.addEventListener('touchEnd', function(){
                 me.input.triggerKeyEvent(me.input.KEY.UP, false);
             });
-            me.device.onReady(function onReady() {
-                game.onload();
-            });
+            
         </script>
 
         <script>
             var userName = 'user' + Math.floor((Math.random()*1000)+1);
             var playersList = [];
-            var socket = io.connect('http://ns3053402.ip-91-121-108.eu:9091');
-            const wsStatusElement = document.querySelector('.ws-status');
-            wsStatusElement.textContent = "Disconnected"
-
-            socket.on('connect', function() {
-                console.log('connected')
-                wsStatusElement.textContent = "Connected"
-            });
-
-            socket.on('disconnect', function() {
-                console.log('disconnected')
+            var socket;
+            const connectWs = () => {
+                socket = io.connect('http://ns3053402.ip-91-121-108.eu:9091');
+            
+                const wsStatusElement = document.querySelector('.ws-status');
                 wsStatusElement.textContent = "Disconnected"
-            });
 
-            socket.on('positionEvent', function(data) {
-                console.log("received", data) 
-                if (data.player.name !== userName) {
-                    const playerFound = playersList.find(player => player.player.name === data.player.name);
-                    if (playerFound) {
-                        // update player
-                        playerFound.x = data.x;
-                        playerFound.y = data.y;
-                        const playerToUpdate = me.game.world.getChildByGUID(playerFound.GUID);
-                        console.log("update player", playerToUpdate, data) 
-                        playerToUpdate.pos.x = data.x - 7;
-                        playerToUpdate.pos.y = data.y;
-                        playerToUpdate.renderable.flipX(data.flippedX);
-                        // playerToUpdate.update();
-                    } else {
-                        console.log("add player", data) 
-                        // create new player
-                        const newPlayer = me.pool.pull("player", data.x - 7, data.y, {
-                            character: data.player.character,
-                            width: 64,
-                            height: 64,
-                        });
-                        newPlayer.renderable.flipX(data.flippedX);
-                        me.game.world.addChild(newPlayer);
-                        data.GUID = newPlayer.GUID;
-                        playersList.push(data);
-                    }
-                    me.game.world.updateChildBounds();
-                }
-            });
+                const joinGame = () => {
+                    const data = {
+                        teamName: 'team1',
+                    };
+                    console.log("asking to join a game", data)
+                    socket.emit('joinGameEvent', data);
+                };
 
-            socket.on('attackEvent', function(data) {
-                console.log("received attack", data)
-                if (data.player.name !== userName) {
-                    const playerFound = playersList.find(player => player.player.name === data.player.name);
-                    if (playerFound) {
-                        // update player
-                        const playerElement = me.game.world.getChildByGUID(playerFound.GUID);
-                        playerElement.attack();
-                    }
-                    me.game.world.updateChildBounds();
-                }
-            });
+                socket.on('connect', function() {
+                    console.log('connected')
+                    wsStatusElement.textContent = "Connected"
+                    setTimeout(() => {
+                        joinGame();
+                    }, 300);
+                    // const [mainPlayer] = me.game.world.getChildByProp("name", "mainPlayer");
+                    // if (mainPlayer) {
+                    //     mainPlayer.joinGame()
+                    // }
+                });
 
-            socket.on('deathEvent', function(data) {
-                console.log("received death", data)
-                if (data.player.name !== userName) {
-                    const playerFound = playersList.find(player => player.player.name === data.player.name);
-                    if (playerFound) {
-                        // update player
-                        const playerElement = me.game.world.getChildByGUID(playerFound.GUID);
-                        me.game.world.removeChild(playerElement);
+                socket.on('disconnect', function() {
+                    console.log('disconnected')
+                    wsStatusElement.textContent = "Disconnected"
+                });
+
+                socket.on('positionEvent', function(data) {
+                    console.log("received", data) 
+                    if (data.player.name !== userName) {
+                        const playerFound = playersList.find(player => player.player.name === data.player.name);
+                        if (playerFound) {
+                            // update player
+                            playerFound.x = data.x;
+                            playerFound.y = data.y;
+                            const playerToUpdate = me.game.world.getChildByGUID(playerFound.GUID);
+                            console.log("update player", playerToUpdate, data) 
+                            playerToUpdate.pos.x = data.x - 7;
+                            playerToUpdate.pos.y = data.y;
+                            playerToUpdate.renderable.flipX(data.flippedX);
+                            // playerToUpdate.update();
+                        } else {
+                            console.log("add player", data) 
+                            // create new player
+                            const newPlayer = me.pool.pull("player", data.x - 7, data.y, {
+                                character: data.player.character,
+                                width: 64,
+                                height: 64,
+                            });
+                            newPlayer.renderable.flipX(data.flippedX);
+                            me.game.world.addChild(newPlayer);
+                            data.GUID = newPlayer.GUID;
+                            playersList.push(data);
+                        }
                         me.game.world.updateChildBounds();
                     }
-                }
+                });
+
+                socket.on('attackEvent', function(data) {
+                    console.log("received attack", data)
+                    if (data.player.name !== userName) {
+                        const playerFound = playersList.find(player => player.player.name === data.player.name);
+                        if (playerFound) {
+                            // update player
+                            const playerElement = me.game.world.getChildByGUID(playerFound.GUID);
+                            playerElement.attack();
+                        }
+                        me.game.world.updateChildBounds();
+                    }
+                });
+
+                socket.on('deathEvent', function(data) {
+                    console.log("received death", data)
+                    if (data.player.name !== userName) {
+                        const playerFound = playersList.find(player => player.player.name === data.player.name);
+                        if (playerFound) {
+                            // update player
+                            const playerElement = me.game.world.getChildByGUID(playerFound.GUID);
+                            me.game.world.removeChild(playerElement);
+                            me.game.world.updateChildBounds();
+                        }
+                    }
+                });
+
+                socket.on('ready', function(data) {
+                    console.log('received ready !')
+                    game.onload();
+                });
+            };
+
+            me.device.onReady(function onReady() {
+                connectWs()
             });
         </script>
     </body>
