--- a/index.html
+++ b/index.html
@@ -1,206 +1,78 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <title>GoC 2019</title>
-        <link rel="stylesheet" type="text/css" media="screen" href="index.css">
-        <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <link rel="manifest" href="manifest.json">
-    </head>
-    <body>
-        <!-- Canvas placeholder -->
-        <div id="screen">
-            <label class="ws-status"></label>
-            <!-- <div class="waiting">Waiting for players...</label> -->
+
+<head>
+  <title>Tutorial</title>
+  <link rel="stylesheet" type="text/css" href="index.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+  <div class="carousel-wrapper">
+    <span id="item-1"></span>
+    <span id="item-2"></span>
+    <span id="item-3"></span>
+    <span id="item-4"></span>
+    <span id="item-5"></span>
+
+    <div class="carousel-item item-1">
+      <div class="card-header">
+        <img src="/assets/img/profilePrince.png" height="80px" width="80px"/>
+        <div class="title">
+          <h2>Docler</h2>
+          <h4>The Prince</h4>
         </div>
+      </div>
+      <p class="description">Hunted by his rival, he's lazy and doesn't know how to fight...</p>
+      <div class="nav-next"><a class="arrow" href="#item-2"></a></div>
+    </div>
+    
+    <div class="carousel-item item-2">
+        <div class="card-header">
+          <img src="/assets/img/profileLibrarian.png" height="80px" width="80px"/>
+          <div class="title">
+            <h2>Libra</h2>
+            <h4>The Librarian</h4>
+          </div>
+        </div>
+        <p class="description">Raised by the BnL, her books are dreadful and powerful.</p>
+        <div class="nav-prev"><a class="arrow" href="#item-1"></a></div>
+        <div class="nav-next"><a class="arrow" href="#item-3"></a></div>
+    </div>
 
-        <!-- es5/es6 shim for legacy browsers" -->
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.11/es5-shim.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.11/es5-sham.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.3/es6-shim.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.3/es6-sham.min.js"></script> -->
+    <div class="carousel-item item-3">
+      <div class="card-header">
+        <img src="/assets/img/profileScientist.png" height="80px" width="80px"/>
+        <div class="title">
+          <h2>Astra</h2>
+          <h4>The Scientist</h4>
+        </div>
+      </div>
+      <p class="description">Designed by SES in 1997 between rockets and gravity.</p>
+      <div class="nav-prev"><a class="arrow" href="#item-2"></a></div>
+      <div class="nav-next"><a class="arrow" href="#item-4"></a></div>
+    </div>
 
-        <!-- melonJS Library -->
-        <!-- build:js js/app.min.js -->
-        <script type="text/javascript" src="lib/melonjs.js"></script>
+    <div class="carousel-item item-4">
+      <div class="card-header">
+        <img src="/assets/img/profileDev.png" height="80px" width="80px"/>
+        <div class="title">
+          <h2>Deva</h2>
+          <h4>The Developer</h4>
+        </div>
+      </div>
+      <p class="description">From the origins of Neofacto.</p>
+      <div class="nav-prev"><a class="arrow" href="#item-3"></a></div>
+      <div class="nav-next"><a class="arrow" href="#item-5"></a></div>
+    </div>
 
-        <!-- Plugin(s) -->
-        <script type="text/javascript" src="lib/plugins/debug/debugPanel.js"></script>
-
-        <!-- Game Scripts -->
-        <script type="text/javascript" src="js/game.js"></script>
-        <script type="text/javascript" src="build/js/resources.js"></script>
-
-        <script type="text/javascript" src="js/entities/entities.js"></script>
-        <script type="text/javascript" src="js/entities/HUD.js"></script>
-        <script type="text/javascript" src="js/entities/projectiles.js"></script>
-
-        <script type="text/javascript" src="js/screens/title.js"></script>
-        <script type="text/javascript" src="js/screens/play.js"></script>
-        <script type="text/javascript" src="js/virtualjoystick.js"></script>
-        <script type="text/javascript" src="js/socket.io/socket.io.js"></script>
-        <!-- /build -->
-
-        <!-- Bootstrap -->
-        <script type="text/javascript">
-            console.log("touchscreen is", VirtualJoystick.touchScreenAvailable() ? "available" : "not available");
-            var leftJoystick	= new VirtualJoystick({
-                container	: document.body,
-                strokeStyle	: 'blue',
-                limitStickTravel: true,
-                stickRadius	: 120
-            });
-            leftJoystick.addEventListener('touchStartValidation', function(event){
-                var touch	= event.changedTouches[0];
-                if( touch.pageX >= window.innerWidth/2 )	return false;
-                return true
-            });
-            leftJoystick.addEventListener('touchStart', function(event){
-                console.log('move', event)
-                // me.input.triggerKeyEvent(me.input.KEY.LEFT, true);
-            })
-            var fireJoystick	= new VirtualJoystick({
-                container	: document.body,
-                strokeStyle	: 'red',
-                limitStickTravel: true,
-                stickRadius	: 0,
-            });
-            var jumpJoystick	= new VirtualJoystick({
-                container	: document.body,
-                strokeStyle	: 'green',
-                limitStickTravel: true,
-                stickRadius	: 0,
-            });
-            fireJoystick.addEventListener('touchStartValidation', function(event){
-                var touch	= event.changedTouches[0];
-                if( touch.pageX >= window.innerWidth/2 && touch.pageY < window.innerHeight/2 )	return true;
-                return false
-            });
-            fireJoystick.addEventListener('touchStart', function(){
-                console.log('fire')
-                me.input.triggerKeyEvent(me.input.KEY.SPACE, true);
-            });
-            fireJoystick.addEventListener('touchEnd', function(){
-                console.log('end fire')
-                me.input.triggerKeyEvent(me.input.KEY.SPACE, false);
-            });
-
-            jumpJoystick.addEventListener('touchStartValidation', function(event){
-                var touch	= event.changedTouches[0];
-                if( touch.pageX >= window.innerWidth/2 && touch.pageY >= window.innerHeight/2 )	return true;
-                return false
-            });
-            jumpJoystick.addEventListener('touchStart', function(){
-                me.input.triggerKeyEvent(me.input.KEY.UP, true);
-            });
-            jumpJoystick.addEventListener('touchEnd', function(){
-                me.input.triggerKeyEvent(me.input.KEY.UP, false);
-            });
-
-            me.device.onReady(function onReady() {
-                game.onload();
-            });
-        </script>
-
-        <script>
-            var userName = 'user' + Math.floor((Math.random()*1000)+1);
-            var playersList = [];
-            var socket;
-            var character;
-            var teamNames = ['team1', 'team2'];
-
-                socket = io.connect('http://ns3053402.ip-91-121-108.eu:9092');
-            
-                const wsStatusElement = document.querySelector('.ws-status');
-                wsStatusElement.textContent = "Disconnected"
-
-                const joinGame = () => {
-                    const data = {
-                        teamName: teamNames[Math.round(Math.random())],
-                    };
-                    console.log("asking to join a game", data)
-                    socket.emit('joinGameEvent', data);
-                };
-
-                socket.on('connect', function() {
-                    console.log('connected')
-                    wsStatusElement.textContent = "Connected"
-                    setTimeout(() => {
-                        joinGame();
-                    }, 300);
-                    // const [mainPlayer] = me.game.world.getChildByProp("name", "mainPlayer");
-                    // if (mainPlayer) {
-                    //     mainPlayer.joinGame()
-                    // }
-                });
-
-                socket.on('disconnect', function() {
-                    console.log('disconnected')
-                    wsStatusElement.textContent = "Disconnected"
-                });
-
-                socket.on('positionEvent', function(data) {
-                    console.log("received", data) 
-                    if (data.player.name !== userName) {
-                        const playerFound = playersList.find(player => player.player.name === data.player.name);
-                        if (playerFound) {
-                            // update player
-                            playerFound.x = data.x;
-                            playerFound.y = data.y;
-                            const playerToUpdate = me.game.world.getChildByGUID(playerFound.GUID);
-                            console.log("update player", playerToUpdate, data) 
-                            playerToUpdate.pos.x = data.x - 7;
-                            playerToUpdate.pos.y = data.y;
-                            playerToUpdate.renderable.flipX(data.flippedX);
-                            // playerToUpdate.update();
-                        } else {
-                            console.log("add player", data) 
-                            // create new player
-                            const newPlayer = me.pool.pull("player", data.x - 7, data.y, {
-                                character: data.player.character,
-                                width: 64,
-                                height: 64,
-                            });
-                            newPlayer.renderable.flipX(data.flippedX);
-                            me.game.world.addChild(newPlayer);
-                            data.GUID = newPlayer.GUID;
-                            playersList.push(data);
-                        }
-                        me.game.world.updateChildBounds();
-                    }
-                });
-
-                socket.on('attackEvent', function(data) {
-                    console.log("received attack", data)
-                    if (data.player.name !== userName) {
-                        const playerFound = playersList.find(player => player.player.name === data.player.name);
-                        if (playerFound) {
-                            // update player
-                            const playerElement = me.game.world.getChildByGUID(playerFound.GUID);
-                            playerElement.attack();
-                        }
-                        me.game.world.updateChildBounds();
-                    }
-                });
-
-                socket.on('deathEvent', function(data) {
-                    console.log("received death", data)
-                    if (data.name !== userName) {
-                        const playerFound = playersList.find(player => player.player.name === data.name);
-                        if (playerFound) {
-                            // update player
-                            const playerElement = me.game.world.getChildByGUID(playerFound.GUID);
-                            me.game.world.removeChild(playerElement);
-                            me.game.world.updateChildBounds();
-                        }
-                    }
-                });
-
-                socket.on('ready', function(data) {
-                    console.log('received ready !', data)                  
-                });
-        </script>
-    </body>
-</html>
+    <div class="carousel-item item-5">
+        <div class="card-header">
+          <img src="/assets/img/wrapped_logo.png" height="80px"/>
+          <div class="title">
+            <h2>Start</h2>
+            <h4>That's it!</h4>
+          </div>
+        </div>
+        <div class="nav-game"><a href="game.html">Join a team</a></div>
+    </div>
+  </div>
+</body>
